--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "flowbite": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.3",
