--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts",
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/components/utils.tsx",
   ".eslintrc.cjs",
 ],
   "references": [{ "path": "./tsconfig.node.json" }]
