--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && cp build/index.html build/404.html",
+    "build": "vite build && cp build/index.html build/404.html",
     "lint": "eslint .",
     "preview": "vite preview",
     "lint:fix": "eslint --fix ."
@@ -13,11 +13,13 @@
   "dependencies": {
     "flowbite": "^2.2.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-paginate": "^8.2.0",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.3",
